--- a/fm/src/app/policies/policies.component.html
+++ b/fm/src/app/policies/policies.component.html
@@ -1,1 +1,8 @@
-<p>policies works!</p>
+<nav class="navbar">
+    <div class="navbar-buttons">
+      <button class="navbar-button manage-button">Manage</button>
+      <button class="navbar-button list-button">List</button>
+      <button class="navbar-button filter-button">Filter</button>
+    </div>
+  </nav>
+  
