--- a/fm/src/app/department-tree/department-tree.component.html
+++ b/fm/src/app/department-tree/department-tree.component.html
@@ -1,1 +1,20 @@
-<p-tree [value]="employees"></p-tree>
+<div class="department-tree-container">
+    <ul>
+      <!-- Department Nodes -->
+      <li *ngFor="let department of employees[0].children">
+        <div class="department-card" (click)="selectDepartment(department)">
+          {{ department.label }}
+        </div>
+  
+        <!-- Team Members Nodes -->
+        <ul *ngIf="selectedDepartment === department">
+          <li *ngFor="let member of department.children">
+            <div class="member-card">
+              {{ member.label }}
+            </div>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  
