--- a/fm/src/app/department-tree/department-tree.component.scss
+++ b/fm/src/app/department-tree/department-tree.component.scss
@@ -1,47 +1,72 @@
-:host ::ng-deep .p-tree {
-    width: 300px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode:last-child {
-    border-bottom: none;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-label {
-    font-weight: bold;
-    color: #333;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-children {
-    padding-left: 20px;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-children .p-treenode {
-    padding-left: 20px;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-children .p-treenode-label {
-    font-weight: normal;
-    color: #666;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-icon {
-    font-size: 18px;
-    margin-right: 10px;
-    color: #999;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-icon.fa-folder {
-    color: #337ab7;
-  }
-  
-  :host ::ng-deep .p-tree .p-treenode-icon.fa-file {
-    color: #666;
-  }
+:host {
+  display: block;
+  padding: 20px;
+}
+
+.department-tree-container {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.department-tree-container ul {
+  margin: 0;
+  padding-left: 20px;
+  position: relative;
+}
+
+.department-tree-container ul::before {
+  content: '';
+  border-left: 2px solid #ccc;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.department-tree-container li {
+  margin: 0;
+  padding: 10px 0 10px 20px;
+  position: relative;
+  list-style-type: none;
+}
+
+.department-tree-container li::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: -20px;
+  border-top: 2px solid #ccc;
+  width: 20px;
+  height: 0;
+}
+
+.department-card {
+  display: block;
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #e9f7ff;
+  transition: background-color 0.3s ease;
+}
+
+.department-card:hover {
+  background-color: #cce5ff;
+}
+
+.member-card {
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #6c757d;
+  border-radius: 5px;
+  font-weight: bold;
+  background-color: #f8f9fa;
+}
+
+.selected {
+  background-color: #b8daff;
+  border-color: #0056b3;
+}
