--- a/fm/src/app/goals-my-data/goals-my-data.component.html
+++ b/fm/src/app/goals-my-data/goals-my-data.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <div class="nav-item" [class.active]="activeNavItem === 'skillset'" (click)="navigateToSkillSet()">Skil Set</div>
+    <div class="nav-item" [class.active]="activeNavItem === 'skillset'" (click)="navigateToSkillSet()">Skill Set</div>
     <div class="nav-item" [class.active]="activeNavItem === 'goals'" (click)="navigateToGoal()">Goals</div>
     <div class="nav-item" [class.active]="activeNavItem === 'competency'" (click)="navigateToCompetency()">Competency</div>
     <div class="nav-item" [class.active]="activeNavItem === 'feedback'" (click)="navigateToFeedback()">Feedback</div>
