--- a/fm/src/app/task-tasks/task-tasks.component.scss
+++ b/fm/src/app/task-tasks/task-tasks.component.scss
@@ -69,3 +69,23 @@
       width: 100%;
     }
   }
+
+  .breadcrumb {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background: linear-gradient(90deg, #1e3c72, #2a5298); /* Gradient background */
+    padding: 0.5rem 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    background-size: cover;
+    border-radius: 10px;
+    border-bottom: 3px solid #123; /* Darker border for a more defined look */
+  }
+
+  .breadcrumb-item {
+    cursor: pointer;
+    color: #f9f9f9;
+    font-weight: bold;
+    position: relative;
+    transition: color 0.3s, background-color 0.3s; /* Smooth transitions */
+  }
