--- a/fm/src/app/app.component.scss
+++ b/fm/src/app/app.component.scss
@@ -14,13 +14,14 @@ body {
 
 /* Sidebar Styles */
 .sidebar {
-  width: 75px;
-  min-width: 75px;
+  width: 78px;
+  min-width:  98px;;
   background-color: #1c2655;
   color: #fff;
   transition: width 0.3s ease;
-  overflow-y: auto;
-}
+  overflow-y: overlay;
+};
+
 
 .header {
   padding: 20px;
@@ -125,3 +126,17 @@ img {
   top: 3px;
   width: 40px;
 }
+.sidebar {
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #0088ff #f1f1f1;
+
+}
+
+
+
+.link.active i {
+  color: #ffffff  ;
+  background-color:#0088ff ;
+}
+
