--- a/fm/src/app/header/header.component.scss
+++ b/fm/src/app/header/header.component.scss
@@ -15,6 +15,7 @@ h1{
 .mt-4{
   margin-right: 19rem;
   background-color: white;
+  padding-left: 4rem;
   // width: 70%;
 }
 a{
@@ -22,9 +23,11 @@ a{
 }
 .nav-item {
   margin-right: 30px;
-  background-color: darkseagreen;
+
   border-radius: 10px;
 }
+
+
 .fa-user{
   padding: 8px;
     padding-top: 5px;
@@ -53,14 +56,14 @@ h2{
   background-color: white;
 }
 .nav-pills .nav-link.active::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 3px;
-  background-color: #4ba2bf;
+  background-color: #0088ff;
   position: absolute;
-  bottom: 38px;
-  left: 0;
+  top: 34px;
+  left: 0px;
 }
 
 
@@ -73,5 +76,20 @@ h2{
   color: white;
 }
 .fa-solid{
-  color:rgb(247,140,45)
+  color:#0088ff;
+}
+
+.tab-content {
+  max-height: 400px; /* Set the height to your preferred value */
+  overflow-y: scroll; /* Allows vertical scrolling */
+  padding: 10px;
+  // border: 1px solid #ddd;
+  background-color: #f8f9fa; /* Optional: Background color */
+  margin-bottom: 15px; /* Optional: Space below the content */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.tab-content::-webkit-scrollbar {
+  display: none; /* Hides scrollbar */
 }
