--- a/fm/src/app/add-goals/add-goals.component.html
+++ b/fm/src/app/add-goals/add-goals.component.html
@@ -1,4 +1,4 @@
-<div class="add-goal-container">
+<div class="add-goal-container mt-3 ">
   <form [formGroup]="addGoalForm" (ngSubmit)="addGoal()">
     <mat-form-field appearance="fill">
       <mat-label>Goal Name</mat-label>
