--- a/fm/src/app/details/details.component.html
+++ b/fm/src/app/details/details.component.html
@@ -1,213 +1,47 @@
- <!-- <div class="container">
-  <h3>Edicational Table</h3>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Course Pursued</th>
-        <th> College/Institution</th>
-        <th>Duration from</th>
-        <th>Duration To</th>
-        <th>CGPA Obtainedr</th>
-        <th>Action</th>
-
-    </thead>
-
-    <tbody>
-      <tr *ngFor="let person of educationDetails; let i = index">
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.cgpaObtained }}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.cgpaObtained" />
-        </td>
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.coursePursued}}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.coursePursued" />
-        </td>
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.durationFrom }}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.durationFrom" />
-        </td>
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.durationTo }}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.durationTo" />
-        </td>
-       <td>
-        <span *ngIf="!person.isEdit">{{ person.institutionName }}</span>
-        <input *ngIf="person.isEdit" [(ngModel)]="person.institutionName" />
-       </td>
-
-        <td>
-          <button
-            type="button"
-            class="btn btn-success me-2"
-            *ngIf="person.isEdit"
-            (click)="saveChanges(i)">
-            save
-          </button>
-          <button
-            type="button"
-            class="btn btn-success me-2"
-            *ngIf="!person.isEdit"
-            (click)="toggleEditMode(i)">
-            <i class="fa-regular fa-floppy-disk"></i>
-
-          </button>
-          <button
-            type="button"
-            class="btn btn-danger"
-            (click)="deleteRow(i)">
-            <i class="fa-solid fa-ban"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>companyname</th>
-        <th>Duration From</th>
-        <th>Duration To</th>
-        <th>Role/title</th>
-        <th>employeeReference</th>
-        <th>Experirnce</th>
-
-    </thead>
-    <tbody>
-      <tr *ngFor="let person of educationDetails; let i = index">
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.cgpaObtained }}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.cgpaObtained" />
-        </td>
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.coursePursued}}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.coursePursued" />
-        </td>
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.durationFrom }}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.durationFrom" />
-        </td>
-        <td>
-          <span *ngIf="!person.isEdit">{{ person.durationTo }}</span>
-          <input *ngIf="person.isEdit" [(ngModel)]="person.durationTo" />
-        </td>
-       <td>
-        <span *ngIf="!person.isEdit">{{ person.institutionName }}</span>
-        <input *ngIf="person.isEdit" [(ngModel)]="person.institutionName" />
-       </td>
-
-        <td>
-          <button
-            type="button"
-            class="btn btn-success me-2"
-            *ngIf="person.isEdit"
-            (click)="saveChanges(i)">
-            save
-          </button>
-          <button
-            type="button"
-            class="btn btn-success me-2"
-            *ngIf="!person.isEdit"
-            (click)="toggleEditMode(i)">
-            <i class="fa-regular fa-floppy-disk"></i>
-
-          </button>
-          <button
-            type="button"
-            class="btn btn-danger"
-            (click)="deleteRow(i)">
-            <i class="fa-solid fa-ban"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div> 
-
-
-
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <input formControlName="name" placeholder="Name">
-  <input formControlName="pass" placeholder="Password">
-  <button type="submit" *ngIf="!isEditing">Save</button>
-  <button type="submit" *ngIf="isEditing">Update</button>
-</form>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Password</th>
-  </tr>
-  <tr *ngFor="let p of fromArray; let i = index">
-    <td>{{ p.name }}</td>
-    <td>{{ p.pass }}</td>
-    <td>
-      <button (click)="editClick(p.id)"><i class="fa-regular fa-floppy-disk"></i></button>
-      <button (click)="deleteClick(p.id)"><i class="fa-solid fa-ban"></i></button>
-    </td>
-  </tr>
-</table> -->
-
-
-<!--table-->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Employee List</title>
-  
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    
-  </style>
-</head>
-<body>
-    <section class="container mt-4" >
+    <div class="detail-page " >
         <div class="btn-group mb-3">
-          <button class="btn btn-danger" (click)="deleteSelectedRows()">Delete</button>
-          <button class="btn btn-primary" (click)="filterWorkers('yes')">Active Employee</button>
-          <button class="btn btn-secondary" (click)="filterWorkers('no')">Inactive Employee</button>
-          <button class="btn btn-info" (click)="filterWorkers('all')">All Employee</button>
+          <button class="btn-1 btn" (click)="deleteSelectedRows()">Delete</button>
+          <button class="btn-2 btn" (click)="filterWorkers('yes')">Active Employee</button>
+          <button class="btn-1 btn" (click)="filterWorkers('no')">Inactive Employee</button>
+          <button class="btn-2 btn" (click)="filterWorkers('all')">All Employee</button>
         </div>
-      
-        <table class="table table-striped" >
-          <thead>
-            <tr>
-               <th >Select</th>
-              <th>FirstName</th>
-              <th>SecondName</th>
-              <th>MailId</th>
-              <th>OfficialMailId</th>
-              <th>Mobile</th>
-              <th>Onboarding Status</th>
-              <th>Department</th>
-              <th>Active</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let worker of workers; let i = index" [hidden]="worker.hidden">
-              <td><input type="checkbox" (change)="toggleSelection($event, worker)"></td>
-              <td>{{ worker.firstName }}</td>
-              <td>{{ worker.secondName }}</td>
-              <td>{{ worker.mailId }}</td>
-              <td>{{ worker.officialMailId }}</td>
-              <td>{{ worker.mobile }}</td>
-              <td>{{ worker.onboardingStatus }}</td>
-              <td>{{ worker.department }}</td>
-              <td>{{ worker.active }}</td>
-              <td><button class="btn btn-primary">View</button></td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-      
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+        <div class="table-container">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Select</th>
+                <th>FirstName</th>
+                <th>SecondName</th>
+                <th>MailId</th>
+                <th>OfficialMailId</th>
+                <th>Mobile</th>
+                <th>Onboarding Status</th>
+                <th>Department</th>
+                <th>Active</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let worker of workers; let i = index" [hidden]="worker.hidden">
+                <td><input type="checkbox" (change)="toggleSelection($event, worker)"></td>
+                <td>{{ worker.firstName }}</td>
+                <td>{{ worker.secondName }}</td>
+                <td>{{ worker.mailId }}</td>
+                <td>{{ worker.officialMailId }}</td>
+                <td>{{ worker.mobile }}</td>
+                <td>{{ worker.onboardingStatus }}</td>
+                <td>{{ worker.department }}</td>
+                <td>{{ worker.active }}</td>
+                <td><button class="btn btn-primary">View</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+      </div>
+
+
 
 
