--- a/fm/src/app/professional/professional.component.html
+++ b/fm/src/app/professional/professional.component.html
@@ -1,7 +1,9 @@
-<div class="container">
+<div class="proffession-page">
   <div class="row">
     <h2 class="col-md-5"><i class="fa-solid fa-mobile-retro"></i>Professional details</h2>
+    <div>
     <h5 class="col-md-5 add"><i class="fa-solid fa-plus btn"></i>Add</h5>
+  </div>
   </div>
   <form [formGroup]="professionalFrom" >
     <div class="form-group  col-md-10">
