--- a/fm/src/app/skillset/skillset.component.html
+++ b/fm/src/app/skillset/skillset.component.html
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="skill-page">
   <div class="mt-4">
     <h2 class="label-spacing">
       <i class="fa-solid fa-book"></i>Skillset details
+      <button class="btn table-btn" (click)="addSkill()">Add</button>
     </h2>
-    <button class="btn table-btn" (click)="addSkill()">Add</button>
-    <div>
+
+    <div class="table-page">
       <table class="table table-striped">
         <thead>
     <tr>
