--- a/fm/src/app/add-goals/add-goals.component.scss
+++ b/fm/src/app/add-goals/add-goals.component.scss
@@ -58,3 +58,8 @@ button[type="button"] {
     background-color: #c82333;  // Darker shade on hover
   }
 }
+
+.mt-3 {
+  max-height: 500px;
+  overflow-y:scroll;
+}
