--- a/fm/src/app/general/general.component.scss
+++ b/fm/src/app/general/general.component.scss
@@ -2,62 +2,69 @@
   display: flex;
   gap: 10rem;
 }
-label{
+
+label {
   font-weight: 700;
 }
-h2{
+
+h2 {
   font-size: 1.5rem;
   margin-top: 34px;
+  color: darkblue;
   margin-bottom: 20px;
   font-weight: lighter;
-  font-weight: 400;
+  font-weight: 500;
 }
-.fa-user{
+
+.fa-user {
   font-size: 25px;
   height: 5px;
   width: 30px;
 }
+
 .table {
   width: 100%;
-  margin: 20px 0;
+  margin: 36px 0;
 }
+
 .btn {
   margin-top: 10px;
 }
+
 .table-buttons {
   display: flex;
   gap: 0.5rem;
 }
-th{
-  background-color:#ebebeb;
+
+th {
+  background-color: #ebebeb;
   padding: 10px;
 }
-// .label-spacing {
-//   margin-bottom: 10px;
-// }
-// .label-div{
-//   margin-top: 26px;
-// }
-.table-btn{
-  background-color:  #30a3bf;
+
+.table-btn {
+  background-color: #30a3bf;
   color: white;
-  margin-left: 68rem;
+  float: right;
+  margin-top: 0rem;
 }
-.table-btn-1{
-  background-color:  #30a3bf;
+
+.table-btn-1 {
+  background-color: #30a3bf;
   color: white;
-  margin-left: 75.7rem;
+  float: right;
 }
+
 .invalid-input {
   border-color: red;
 }
-.next{
-  background-color:#8929a6 ;
+
+.next {
+  background-color: #8929a6;
   color: white;
-  margin-left: 74.7rem;
+  float: right;
 }
 
-.fa-chevron-right{
+.fa-chevron-right {
   font-size: 13px;
   padding: 4px;
 }
@@ -76,3 +83,8 @@ th{
   cursor: pointer;
 }
 
+.general-page {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 6rem 1rem 1rem;
+}
