--- a/fm/src/app/header/header.component.html
+++ b/fm/src/app/header/header.component.html
@@ -1,59 +1,51 @@
-<header class="head d-flex justify-content-between align-items-center p-3 text-white">
-  <h1><img src="../../assets/images/Screenshot 2024-05-29 114456.png" alt="">CAREERS</h1>
-  <h5><i class="fa-solid fa-user"></i>Pravin</h5>
-</header>
+<nav class="breadcrumb">
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'general'">Profile > General</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'educational' ">Profile >  Educational</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'skillset'">Profile > Skillset</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'professional' ">Profile > Professional</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'details' ">Profile >  Details</span>
+  <span class="breadcrumb-item" *ngIf="activeNavItem === 'personalDataForm'">Profile > Personal Data Form</span>
+</nav>
 
-<div class="container mt-4">
-  <nav class="nav nav-pills mb-4">
+  <nav class="navbar">
     <li class="nav-item">
-      <a class="nav-link" [class.active]="activeTab === 'general'" (click)="selectTab('general')">
+      <a class="nav-link" [class.active]="activeNavItem === 'general'" (click)="selectTab('general')">
         <i class="fa-solid fa-circle"></i> General
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [class.active]="activeTab === 'educational'" (click)="selectTab('educational')">
+      <a class="nav-link" [class.active]="activeNavItem === 'educational'" (click)="selectTab('educational')">
         <i class="fa-solid fa-circle"></i> Educational
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [class.active]="activeTab === 'skillset'" (click)="selectTab('skillset')">
+      <a class="nav-link" [class.active]="activeNavItem === 'skillset'" (click)="selectTab('skillset')">
         <i class="fa-solid fa-circle"></i> Skillset
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [class.active]="activeTab === 'professional'" (click)="selectTab('professional')">
+      <a class="nav-link" [class.active]="activeNavItem === 'professional'" (click)="selectTab('professional')">
         <i class="fa-solid fa-circle"></i> Professional
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [class.active]="activeTab === 'details'" (click)="selectTab('details')">
+      <a class="nav-link" [class.active]="activeNavItem === 'details'" (click)="selectTab('details')">
         <i class="fa-solid fa-circle"></i> Details
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [class.active]="activeTab === 'personalDataForm'" (click)="selectTab('personalDataForm')">
+      <a class="nav-link" [class.active]="activeNavItem === 'personalDataForm'" (click)="selectTab('personalDataForm')">
         <i class="fa-solid fa-circle"></i> Personal Data Form
       </a>
     </li>
   </nav>
   <hr>
   <!-- Conditionally Render Components with Scrollable Containers -->
-  <div class="tab-content" *ngIf="activeTab === 'general'">
-    <app-general></app-general>
+  <div class="scrollable-content">
+    <app-general *ngIf="activeNavItem === 'general'"></app-general>
+    <app-educational *ngIf="activeNavItem === 'educational'"></app-educational>
+    <app-skillset *ngIf="activeNavItem === 'skillset'"></app-skillset>
+    <app-professional *ngIf="activeNavItem === 'professional'"></app-professional>
+    <app-details *ngIf="activeNavItem === 'details'"></app-details>
+    <app-personal-data-form *ngIf="activeNavItem === 'personalDataForm'"></app-personal-data-form>
   </div>
-  <div class="tab-content" *ngIf="activeTab === 'educational'">
-    <app-educational></app-educational>
-  </div>
-  <div class="tab-content" *ngIf="activeTab === 'skillset'">
-    <app-skillset></app-skillset>
-  </div>
-  <div class="tab-content" *ngIf="activeTab === 'professional'">
-    <app-professional></app-professional>
-  </div>
-  <div class="tab-content" *ngIf="activeTab === 'details'">
-    <app-details></app-details>
-  </div>
-  <div class="tab-content" *ngIf="activeTab === 'personalDataForm'">
-    <app-personal-data-form></app-personal-data-form>
-  </div>
-</div>
