--- a/fm/src/app/leave-tracking/leave-tracking.component.scss
+++ b/fm/src/app/leave-tracking/leave-tracking.component.scss
@@ -1,24 +1,23 @@
-/* src/app/navbar/navbar.component.scss */
 .navbar {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    // background: linear-gradient(90deg, #1e3c72, #2a5298); /* Gradient background */
     background-color: #2e3b61;
+    gap: 2rem;
+    padding: 1rem;
     padding: 0.5rem 1rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-size: cover;
-    // border-bottom: 3px solid #123; /* Darker border for a more defined look */
-    // border-radius: 10px;
+
   }
 
   .nav-item {
-    padding: 0.5rem 1rem; /* Reduced padding */
+    padding: 0.5rem 1rem;
     cursor: pointer;
     color: #f9f9f9;
     font-weight: bold;
     position: relative;
-    transition: color 0.3s, background-color 0.3s; /* Smooth transitions */
+    transition: color 0.3s, background-color 0.3s;
     border-radius: 10px;
   }
 
@@ -26,31 +25,22 @@
     content: "";
     position: absolute;
     width: 0;
-    height: 2px; /* Reduced height */
+    height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #0088ff; /* Highlight color */
+    background-color: #0088ff;
     transition: width 0.3s;
   }
 
-  // .nav-item:hover {
-  //   background-color: #f1f1f1;
-  //   color: #1e3c72;
-  // }
 
   .nav-item:hover::after {
     width: 100%;
   }
 
-  // .nav-item:active {
-  //   transform: scale(0.95); /* Slight scale down on click */
-  //   background-color: #e0e0e0;
-  //   color: #123;
-  // }
 
   .nav-item.active {
-    background-color: #f1f1f1; /* Same as hover color */
-    color: #1e3c72; /* Same as hover color */
+    background-color: #f1f1f1;
+    color: #1e3c72;
   }
 
   .nav-item.active::after {
@@ -74,12 +64,10 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    background: linear-gradient(90deg, #1e3c72, #2a5298); /* Gradient background */
+    background: linear-gradient(90deg, #1e3c72, #2a5298);
     padding: 0.5rem 1rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-size: cover;
-    border-radius: 10px;
-    border-bottom: 3px solid #123; /* Darker border for a more defined look */
   }
 
   .breadcrumb-item {
@@ -87,5 +75,5 @@
     color: #f9f9f9;
     font-weight: bold;
     position: relative;
-    transition: color 0.3s, background-color 0.3s; /* Smooth transitions */
+    transition: color 0.3s, background-color 0.3s;
   }
