--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -1,8 +1,7 @@
 <div class="head-image">
 <img src="../../assets/images/global-presence.jpg">
 </div>
-<div class="container mt-5">
-  <!-- <img src="../../assets/images/global-presence.jpg"> -->
+<div class="overview-page">
   <div class="row">
     <div class="col-4">
       <div class="card">
