--- a/fm/src/app/personal-data-form/personal-data-form.component.scss
+++ b/fm/src/app/personal-data-form/personal-data-form.component.scss
@@ -8,7 +8,6 @@
     font-size: 24px;
     font-weight: 600;
   }
-  /* Label styling */
   label {
     display: block;
     font-weight: bold;
@@ -16,12 +15,11 @@
     color: #555;
   }
 
-  /* Text input styling */
   input[type="text"],
   input[type="email"],
   textarea {
     width: 100%;
-    max-width: 60%; /* Larger width for text inputs */
+    max-width: 60%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -32,14 +30,13 @@
     transition: border-color 0.3s, box-shadow 0.3s;
   }
 
-  /* Number and date input styling */
   input[type="number"],
   input[type="date"],
   input[type="file"],
   input[type="checkbox"],
   select {
     width: 100%;
-    max-width: 56%; /* Smaller width for number, date, and select inputs */
+    max-width: 56%;
     height: 45px;
     padding: 5px;
     margin-bottom: 20px;
@@ -51,13 +48,11 @@
     transition: border-color 0.3s, box-shadow 0.3s;
   }
 
-  /* Checkbox styling */
   input[type="checkbox"] {
     width: auto;
     margin-right: 20px;
   }
 
-  /* Radio button section */
   section[formControlName="category"] {
     display: flex;
     flex-wrap: wrap;
@@ -73,13 +68,11 @@
     margin-left: 5px;
   }
 
-  /* Placeholder styling */
   input::placeholder,
   textarea::placeholder {
     color: #aaa;
   }
 
-  /* Button styling */
   button {
     background-color: #1e3c72;;
     color: white;
@@ -96,21 +89,18 @@
     transform: translateY(-3px);
   }
 
-  /* Animation for inputs on hover */
   input:hover,
   select:hover,
   textarea:hover {
     border-color: #007bff;
   }
 
-  /* Smooth transition effect */
   input,
   select,
   textarea {
     transition: border-color 0.3s, box-shadow 0.3s;
   }
 
-  /* Responsive adjustments */
   @media (max-width: 768px) {
     form {
       padding: 20px;
@@ -135,5 +125,12 @@
       font-size: 14px;
       padding: 10px 20px;
     }
+  }
+
+  .personal-data-page{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+
   }
 
